--- a/style.css
+++ b/style.css
@@ -83,3 +83,9 @@ input[type="number"] {
 .block {
   margin: 0.5em;
 }
+
+#noteLink {
+  background-color: rgba(80, 80, 120, 1);
+  color: inherit;
+  text-decoration: none;
+}
